feat: added global exception handling (#2)
* added global exception handling

* generalized invalid ids to bad requests

* generalized interfaces for simplified global exceptions and explicit responses

* introduced invalid user id exception to specify cause

* added catchall for internal server errors

* generalized error responses to accommodate future endpoints

* fixed formatting with auto formatting

* changed user profile list to be all or nothing

* moved invalid user id exception throw to service method

* fixed typo

* fixed error in grammar

* distinguished invalid id messages

* reworked exception method signatures

* guarded user id verification against really large values

* added null checks to exceptions to defend against npe

* corrected constant use for profile list exception

* corrected collection mocks to align with new validation behavior

* updated assertion message to reflect change in test

* corrected grammatical error in assertion message

* corrected grammatical error in assertion message

* corrected grammatical error in assertion message

* added check for nulls in id lists for exceptions

* added null and empty input validation for profile list

* removed redundant service mock

* corrected grammatical error in assertion

* replaced exception rethrow with generic message on error

* expanded testing for additional edge cases introduced

* fixed mocks for valid non existent ids

* addressed nitpicks