@@ -1,6 +1,5 @@
 package net.spotapps.tester.service;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.apache.commons.lang3.math.NumberUtils;
@@ -10,14 +9,16 @@ import net.spotapps.tester.UserProfileConstants;
 import net.spotapps.tester.dao.UserProfileRepository;
 import net.spotapps.tester.dto.UserProfileDto;
 import net.spotapps.tester.model.UserProfile;
-import net.spotapps.tester.model.exception.InvalidIdException;
+import net.spotapps.tester.model.exception.InvalidUserIdCollectionException;
+import net.spotapps.tester.model.exception.InvalidUserIdException;
+import net.spotapps.tester.model.exception.UserProfileCollectionNotFoundException;
 import net.spotapps.tester.model.exception.UserProfileNotFoundException;
 
 @Service
 public class UserProfileServiceImpl implements UserProfileService {
 
-    private UserProfileRepository userProfileRepository;
-    
+    private final UserProfileRepository userProfileRepository;
+
     public UserProfileServiceImpl(final UserProfileRepository repository) {
 
         this.userProfileRepository = repository;
@@ -26,46 +27,73 @@ public class UserProfileServiceImpl implements UserProfileService {
     @Override
     public UserProfileDto getUserProfile(final String userId) {
 
-        validateId(userId);
+        if (!isValidUserId(userId)) {
+            throw new InvalidUserIdException(UserProfileConstants.INVALID_ID_MESSAGE, userId);
+        }
 
         Long id = NumberUtils.createLong(userId);
 
         UserProfile userProfile = userProfileRepository.findById(id).orElseThrow(
-            () -> new UserProfileNotFoundException(UserProfileConstants.USER_PROFILE_NOT_FOUND_MESSAGE, id));
+                () -> new UserProfileNotFoundException(UserProfileConstants.USER_PROFILE_NOT_FOUND_MESSAGE, id));
 
         return UserProfileDto.convertUserProfileToDto(userProfile);
     }
 
     @Override
     public List<UserProfileDto> getUserProfileList(final List<String> userIds) {
-        
-        List<Long> validUserIds = userIds.stream()
-            .filter(NumberUtils::isDigits)
-            .map(NumberUtils::createLong)
-            .toList();
 
-        if (validUserIds.isEmpty()) {
-            return Collections.emptyList();
+        if (userIds == null || userIds.isEmpty()) {
+            throw new InvalidUserIdCollectionException(
+                    UserProfileConstants.INVALID_ID_COLLECTION_MESSAGE, 
+                    userIds == null ? List.of("<null>") : List.of("<empty>"));
         }
 
-        return userProfileRepository.findAllByUserIdInOrderByUserIdAsc(validUserIds).stream()
-            .map(UserProfileDto::convertUserProfileToDto)
-            .toList();
+        var invalidUserIds = getInvalidUserIds(userIds);
+
+        if (!invalidUserIds.isEmpty()) {
+            throw new InvalidUserIdCollectionException(
+                    UserProfileConstants.INVALID_ID_COLLECTION_MESSAGE, invalidUserIds);
+        }
+
+        var userProfiles = userProfileRepository.findAllByUserIdInOrderByUserIdAsc(userIds.stream()
+                .map(NumberUtils::createLong)
+                .toList());
+
+        if (userProfiles.isEmpty()) {
+            throw new UserProfileCollectionNotFoundException(
+                    UserProfileConstants.USER_PROFILE_COLLECTION_NOT_FOUND_MESSAGE, userIds);
+        }
+
+        return userProfiles.stream()
+                .map(UserProfileDto::convertUserProfileToDto)
+                .toList();
     }
 
     @Override
     public List<UserProfileDto> getAllProfiles() {
-        
+
         return userProfileRepository.findAll().stream()
-            .map(UserProfileDto::convertUserProfileToDto)
-            .toList();
+                .map(UserProfileDto::convertUserProfileToDto)
+                .toList();
     }
 
-    private void validateId(final String userId) {
-
-        if (!NumberUtils.isDigits(userId)) {
-            throw new InvalidIdException(UserProfileConstants.INVALID_ID_MESSAGE, userId);
+    private boolean isValidUserId(final String userId) {
+        if (userId == null || !NumberUtils.isDigits(userId)) {
+            return false;
         }
+        try {
+            return Long.parseLong(userId) > 0;
+        } catch (NumberFormatException e) {
+            return false;
+        }
+
+    }
+
+    private List<String> getInvalidUserIds(final List<String> userIds) {
+        return userIds.stream()
+                .map(userId -> userId == null ? "null" : userId)
+                .filter(userId -> !isValidUserId(userId))
+                .toList();
     }
 
 }
